CSS query string and body clipping fix

--- a/sass/universal.scss
+++ b/sass/universal.scss
@@ -27,7 +27,6 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
   background: linear-gradient(270deg, #c9d8ff, #d5c7ff);
   background-size: 400% 400%;
 
